"Origins variable-ized"